--- a/EcommWeb/shop/templates/changepass.html
+++ b/EcommWeb/shop/templates/changepass.html
@@ -39,6 +39,7 @@
           </ul>
           <div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
                 <a
                   class="nav-link dropdown-toggle text-white"
@@ -48,7 +49,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                 {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -71,7 +72,7 @@
                       >Change Password</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
               <li class="nav-item mx-2">
@@ -79,6 +80,7 @@
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
+              {% else %}
               <li class="nav-item mx-2">
                 <a href="{% url 'login' %}" class="nav-link text-white"
                   >Login</a
@@ -89,6 +91,7 @@
                   >Register</a
                 >
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -99,25 +102,37 @@
     <div class="container">
     <div class="row my-3">
     <div class="col-sm-6 offset-sm-3">
-    <h3 align="center">Welcome Karthik</h3>
+    <h3 align="center">Welcome {{request.user.username|capfirst}}</h3>
    <h3 align="center">Change Your Password</h3>
    <br>
 
-   <form action="" method="post" novalidate class="shadow p-5">
-    <div class="mb-3">
-     <label for="inputEmail4" class="form-label">Email</label>
-     <input type="email" class="form-control" id="inputEmail4" placeholder="Enter Your Email ID">
-    </div>
-    <div class="mb-3">
-     <label for="inputPassword1" class="form-label">New Password</label>
-     <input type="password" class="form-control" id="inputPassword1" placeholder="Enter Your New Password">
-    </div>
-    <div class="mb-3">
-     <label for="inputPassword2" class="form-label">Confirm Password</label>
-     <input type="password" class="form-control" id="inputPassword2" placeholder="Confirm Your New Password" >
-    </div>
-    <div class="text-center">
-     <button type="button" class="btn btn-success">Change</button>
+        <form action="" method="post" novalidate class="shadow p-5">
+        {% if messages %}
+            {% for message in messages %}
+              <p {% if message.tags %} class="alert alert-{{message.tags}} mb-4" {% endif %} align="center"> {{message}} </p>
+            {% endfor %}
+          {% endif %}
+          {% csrf_token %}
+          {% for fm in form %}
+            <div class="form-group">
+            <div class="label mb-1">
+            {{fm.label_tag}} 
+            </div>
+            {{fm}}
+            <small class="text-danger">{{fm.errors|striptags}}</small><br>
+            </div> 
+          {% endfor %}
+          <div class="buttonone mt-0" align="center">
+            <input type="submit" class="btn btn-success mt-4" value="Change Password">
+          </div>
+            {% if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+            <p class="alert alert-danger my-3">{{error}}</p>
+              {% endfor %}
+            {% endif %}
+          </form>
+        </div>
+      </div>
     </div>
 
 
