--- a/EcommWeb/shop/templates/orders.html
+++ b/EcommWeb/shop/templates/orders.html
@@ -39,6 +39,7 @@
           </ul>
           <div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
                 <a
                   class="nav-link dropdown-toggle text-white"
@@ -48,7 +49,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                  {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -71,7 +72,7 @@
                       >Change Password</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
               <li class="nav-item mx-2">
@@ -79,6 +80,7 @@
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
+              {% else %}
               <li class="nav-item mx-2">
                 <a href="{% url 'login' %}" class="nav-link text-white"
                   >Login</a
@@ -89,6 +91,7 @@
                   >Register</a
                 >
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -100,7 +103,7 @@
     <div class="container">
     <div class="row my-3">
     <div class="col-sm-6 offset-sm-3">
-    <h3 align="center">Welcome Karthik</h3>
+    <h3 align="center">Welcome {{request.user.username|capfirst}}</h3>
    <h3 align="center">Your Orders</h3>
    <br>
 
