--- a/EcommWeb/shop/templates/ordersummary.html
+++ b/EcommWeb/shop/templates/ordersummary.html
@@ -16,7 +16,7 @@
     <title>Profile Page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container">
         <a class="navbar-brand" href="{% url 'landingpage' %}">ShopFresho</a>
         <button
@@ -43,6 +43,7 @@
           </ul>
           <div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
                 <a
                   class="nav-link dropdown-toggle text-white"
@@ -52,7 +53,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                  {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -75,7 +76,7 @@
                       >Change Password</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
               <li class="nav-item mx-2">
@@ -83,6 +84,7 @@
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
+              {% else %}
               <li class="nav-item mx-2">
                 <a href="{% url 'login' %}" class="nav-link text-white"
                   >Login</a
@@ -93,6 +95,7 @@
                   >Register</a
                 >
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
