--- a/EcommWeb/shop/templates/password_reset.html
+++ b/EcommWeb/shop/templates/password_reset.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="/static/CSS/styles.css" />
 
-    <title>Login Page</title>
+    <title>Password Reset Page</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
@@ -53,7 +53,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                  {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -106,7 +106,7 @@
       <div class="row my-3">
         <div class="col-sm-6 offset-sm-3">
           <br />
-          <h3 align="center">Login To Your Account</h3>
+          <h3 align="center">Reset Your Password</h3>
           <br />
 
           <form action="" method="post" novalidate class="shadow p-5">
@@ -120,12 +120,9 @@
             <small class="text-danger">{{fm.errors|striptags}}</small><br>
             </div> 
           {% endfor %}
-            <small><div class="newone mt-1" align="center"><a href="{% url 'password_reset' %}">Forgot Password?</a></div></small><br>
-            <div class="buttonnew" align="center"> <input type="submit" class="btn btn-success mt-0" value="Login"> </div>
-            <br>
-            <div class="text-center text-primary fw-bold">
-            <small>Don't Have An Account?<br>
-            <a href="{% url 'register' %}" class="text-danger">Create An Account</a></small></div>
+          <div class="buttonone" align="center">
+            <input type="submit" class="btn btn-success mt-0" value="Submit">
+            </div>
             {% if form.non_field_errors %}
               {% for error in form.non_field_errors %}
                 <p class="alert alert-danger my-3">{{error}}</p>
