--- a/EcommWeb/shop/templates/password_reset_confirm.html
+++ b/EcommWeb/shop/templates/password_reset_confirm.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/static/CSS/styles.css" />
 
-    <title>Login Page</title>
-  </head>
-  <body>
+
+    <title>Reset Password Page</title>
+    </head>
+    <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container">
         <a class="navbar-brand" href="{% url 'landingpage' %}">ShopFresho</a>
@@ -53,7 +49,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                 {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -101,15 +97,16 @@
         </div>
       </div>
     </nav>
+<br>
 
     <div class="container">
-      <div class="row my-3">
-        <div class="col-sm-6 offset-sm-3">
-          <br />
-          <h3 align="center">Login To Your Account</h3>
-          <br />
+    <div class="row my-3">
+    <div class="col-sm-6 offset-sm-3">
+    <h3 align="center">Welcome {{request.user.username|capfirst}}</h3>
+   <h3 align="center">Reset Your Password</h3>
+   <br>
 
-          <form action="" method="post" novalidate class="shadow p-5">
+        <form action="" method="post" novalidate class="shadow p-5">
           {% csrf_token %}
           {% for fm in form %}
             <div class="form-group">
@@ -120,15 +117,12 @@
             <small class="text-danger">{{fm.errors|striptags}}</small><br>
             </div> 
           {% endfor %}
-            <small><div class="newone mt-1" align="center"><a href="{% url 'password_reset' %}">Forgot Password?</a></div></small><br>
-            <div class="buttonnew" align="center"> <input type="submit" class="btn btn-success mt-0" value="Login"> </div>
-            <br>
-            <div class="text-center text-primary fw-bold">
-            <small>Don't Have An Account?<br>
-            <a href="{% url 'register' %}" class="text-danger">Create An Account</a></small></div>
+          <div class="buttonone mt-0" align="center">
+            <input type="submit" class="btn btn-success mt-4" value="Change Password">
+          </div>
             {% if form.non_field_errors %}
-              {% for error in form.non_field_errors %}
-                <p class="alert alert-danger my-3">{{error}}</p>
+            {% for error in form.non_field_errors %}
+            <p class="alert alert-danger my-3">{{error}}</p>
               {% endfor %}
             {% endif %}
           </form>
@@ -137,19 +131,9 @@
     </div>
 
 
-
-    <!-- Jquery -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     <script src="/static/app/js/owl.carousel.min.js"></script>
     <script src="/static/app/js/all.min.js"></script>
