--- a/EcommWeb/shop/templates/passwordchanconfirm.html
+++ b/EcommWeb/shop/templates/passwordchanconfirm.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/static/CSS/styles.css" />
 
-    <title>Login Page</title>
-  </head>
-  <body>
+
+    <title>Change Password Page</title>
+    </head>
+    <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container">
         <a class="navbar-brand" href="{% url 'landingpage' %}">ShopFresho</a>
@@ -53,7 +49,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                  {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -101,44 +97,26 @@
         </div>
       </div>
     </nav>
-
-    <div class="container">
-      <div class="row my-3">
-        <div class="col-sm-6 offset-sm-3">
-          <br />
-          <h3 align="center">Login To Your Account</h3>
-          <br />
-
-          <form action="" method="post" novalidate class="shadow p-5">
-          {% csrf_token %}
-          {% for fm in form %}
-            <div class="form-group">
-            <div class="label mb-1">
-            {{fm.label_tag}} 
-            </div>
-            {{fm}}
-            <small class="text-danger">{{fm.errors|striptags}}</small><br>
-            </div> 
-          {% endfor %}
-            <small><div class="newone mt-1" align="center"><a href="{% url 'password_reset' %}">Forgot Password?</a></div></small><br>
-            <div class="buttonnew" align="center"> <input type="submit" class="btn btn-success mt-0" value="Login"> </div>
-            <br>
-            <div class="text-center text-primary fw-bold">
-            <small>Don't Have An Account?<br>
-            <a href="{% url 'register' %}" class="text-danger">Create An Account</a></small></div>
-            {% if form.non_field_errors %}
-              {% for error in form.non_field_errors %}
-                <p class="alert alert-danger my-3">{{error}}</p>
-              {% endfor %}
-            {% endif %}
-          </form>
-        </div>
-      </div>
-    </div>
+<br>
 
 
+<div class="all" align="center">
+<div class="card" style="width: 22rem; border-color: green; border-width: medium;">
+<div class="image" align="center">
+  <img src="/static/images/tick.jpg" class="card-img-top" style="width:9rem">
+  </div>
+  <div class="card-body">
+  <h2>Password Changed!!!</h2>
+    <p class="card-text">Your password has been changed successfully.</p>
+  </div>
 
-    <!-- Jquery -->
+    <div class="button-one mb-4" align="center">
+  <a type="button" class="btn btn-success"style="width: 12rem" href="{% url 'landingpage' %}">Back to Home</a>
+  </div>
+</div>
+</div>
+
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
