--- a/EcommWeb/shop/templates/profile.html
+++ b/EcommWeb/shop/templates/profile.html
@@ -43,6 +43,7 @@
           </ul>
           <div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
                 <a
                   class="nav-link dropdown-toggle text-white"
@@ -52,7 +53,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                 {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -75,7 +76,7 @@
                       >Change Password</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
               <li class="nav-item mx-2">
@@ -83,6 +84,7 @@
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
+              {% else %}
               <li class="nav-item mx-2">
                 <a href="{% url 'login' %}" class="nav-link text-white"
                   >Login</a
@@ -93,6 +95,7 @@
                   >Register</a
                 >
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -103,82 +106,28 @@
     <div class="container">
       <div class="row my-3">
         <div class="col-sm-6 offset-sm-3">
-          <h3 align="center">Welcome Karthik</h3>
+          <h3 align="center">Welcome {{request.user.username|capfirst}}</h3>
           <h3 align="center">Enter Your Address</h3>
           <br />
 
           <form action="" method="post" novalidate class="shadow p-5">
-            <input
-              type="hidden"
-              name="csrfmiddlewaretoken"
-              value="jTOhUifJdSsKznY9lIkl7xBPFXJkVH4qCqpz9CpqsGIKcy4q7YrX6TYHwk7B6OYN"
-            />
-            <div class="col-12">
-              <label for="inputName" class="form-label"
-                >Name of the Resident</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="inputEmail"
-                placeholder="Enter the Name"
-              />
+         {% if messages %}
+            {% for message in messages %}
+              <p {% if message.tags %} class="alert alert-{{message.tags}} mb-4" {% endif %} align="center"> {{message}} </p>
+            {% endfor %}
+          {% endif %}
+          {% csrf_token %}
+          {% for fm in form %}
+              <div class="form-group mb-4">
+              <div class="forlabel mb-1">
+              {{fm.label_tag}}</div>{{fm}}
+              <small class="text-danger"> {{fm.errors|striptags}} </small>
+              </div>
+            {% endfor %}
+            <div class="buttonone" align="center">
+            <input type="submit" value="Submit" class="btn btn-success"/>
             </div>
             <br />
-            <div class="col-12">
-              <label for="inputAddress" class="form-label"
-                >Door No. & Apartment
-              </label>
-              <input
-                type="text"
-                class="form-control"
-                id="inputAddress"
-                placeholder="Door No 205 Prime Enclave"
-              />
-            </div>
-            <br />
-            <div class="col-12">
-              <label for="inputAddress2" class="form-label"
-                >Street Name or Locality</label
-              >
-              <input
-                type="text"
-                class="form-control"
-                id="inputAddress2"
-                placeholder="Tagore Lane"
-              />
-            </div>
-            <br />
-            <div class="col-12">
-              <label for="inputCity" class="form-label">City</label>
-              <input
-                type="text"
-                class="form-control"
-                id="inputCity"
-                placeholder="Kolkata"
-              />
-            </div>
-            <br />
-            <div class="col-md-4">
-              <label for="inputState" class="form-label">State</label>
-              <select id="inputState" class="form-select">
-                <option selected>Select Your State</option>
-                <option>...</option>
-              </select>
-            </div>
-            <br />
-            <div class="col-md-2">
-              <label for="inputZip" class="form-label">Pincode</label>
-              <input
-                type="text"
-                class="form-control"
-                id="inputZip"
-                placeholder="XXXX23"
-              />
-            </div>
-            <div class="col-12 mt-3" align="center">
-              <button type="submit" class="btn btn-success">Submit</button>
-            </div>
           </form>
         </div>
       </div>
