--- a/EcommWeb/shop/templates/register.html
+++ b/EcommWeb/shop/templates/register.html
@@ -43,6 +43,7 @@
           </ul>
           <div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
                 <a
                   class="nav-link dropdown-toggle text-white"
@@ -52,7 +53,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                  {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -75,7 +76,7 @@
                       >Change Password</a
                     >
                   </li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
               <li class="nav-item mx-2">
@@ -83,6 +84,7 @@
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
+              {% else %}
               <li class="nav-item mx-2">
                 <a href="{% url 'login' %}" class="nav-link text-white"
                   >Login</a
@@ -93,6 +95,7 @@
                   >Register</a
                 >
               </li>
+              {% endif %}
             </ul>
           </div>
         </div>
@@ -107,45 +110,40 @@
           <br />
 
           <form action="" method="post" novalidate class="shadow p-5">
-            <div class="mb-3">
-              <label for="inputEmail4" class="form-label">Email</label>
-              <input
-                type="email"
-                class="form-control"
-                id="inputEmail4"
-                placeholder="Enter Your Email ID"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="inputPassword1" class="form-label">Password</label>
-              <input
-                type="password"
-                class="form-control"
-                id="inputPassword1"
-                placeholder="Enter Your Password"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="inputPassword2" class="form-label"
-                >Confirm Password</label
-              >
-              <input
-                type="password"
-                class="form-control"
-                id="inputPassword2"
-                placeholder="Confirm Your Password"
-              />
-            </div>
-            <div class="text-center">
-              <button type="button" class="btn btn-success">Submit</button>
+          {% if messages %}
+            {% for message in messages %}
+              <p {% if message.tags %} class="alert alert-{{message.tags}} mb-4" {% endif %} align="center"> {{message}} </p>
+            {% endfor %}
+          {% endif %}
+           {% csrf_token %} 
+            {% for fm in form %}
+              <div class="form-group mb-4">
+              <div class="forlabel mb-1">
+              {{fm.label_tag}}</div>{{fm}}
+              <small class="text-danger"> {{fm.errors|striptags}} </small>
+              </div>
+            {% endfor %}
+            <div class="buttonone" align="center">
+            <input type="submit" value="Submit" class="btn btn-success"/>
             </div>
             <br />
             <div class="text-center text-primary fw-bold">
               <small
-                >Already Have An Account?
-                <a href="/login/" class="text-danger"> <br />Login Now</a>
-              </small>
+                >Account Already Exists?
+                <br>
+                <a
+                  href="{% url 'login' %}"
+                  class="text-danger"
+                  >Login In Now</a
+                ></small
+              >
             </div>
+            {% if form.non_field_errors %} 
+              {% for error in form.non_field_errors %}
+                <p class="alert alert-danger my-3">{{error}}</p>
+              {% endfor %}
+            {% endif %}
+
           </form>
         </div>
       </div>
