--- a/EcommWeb/shop/templates/changepass.html
+++ b/EcommWeb/shop/templates/changepass.html
@@ -76,7 +76,7 @@
                 </ul>
               </li>
               <li class="nav-item mx-2">
-                <a href="{% url 'shoppingcart' %}" class="nav-link text-white"
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
