--- a/EcommWeb/shop/templates/addresses.html
+++ b/EcommWeb/shop/templates/addresses.html
@@ -75,7 +75,7 @@
                 </ul>
               </li>
               <li class="nav-item mx-2">
-                <a href="{% url 'shoppingcart' %}" class="nav-link text-white"
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
@@ -109,9 +109,9 @@
    <div class="col-sm-9 offset-sm-1">
    <div class="row">
    {% for add in custadd%}
-    <div class="col-sm-6">
+    <div class="col-sm-6" >
      <div class="card">
-      <div class="card-body">
+      <div class="card-body" style="border-style:solid">
        <h3>Address {{forloop.counter}}</h3>
        <br>
        <p>Name: {{add.Name}}</p>
