--- a/EcommWeb/shop/templates/emptycart.html
+++ b/EcommWeb/shop/templates/emptycart.html
@@ -8,8 +8,15 @@
 
     <link rel="stylesheet" href="/static/CSS/styles.css" />
 
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
 
-    <title>Change Password Success Page</title>
+    
+    <title>Shopping Cart Page</title>
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
@@ -97,37 +104,31 @@
         </div>
       </div>
     </nav>
-<br>
 
-
-<div class="all" align="center">
-<div class="card" style="width: 22rem; border-color: green; border-width: medium;">
-<div class="image" align="center">
-  <img src="/static/images/tick.jpg" class="card-img-top" style="width:9rem">
-  </div>
-  <div class="card-body">
-  <h2>Password Successfully Reset!!</h2>
-    <p class="card-text">You have successfully reset your password.</p>
-  </div>
+    <div class="container my-4">
+    <div class="row">
+    <h1 class="text-center mb-4">Shopping Cart</h1>
+    <div class="all" align="center">
+    <div class="card" style="width: 22rem; border-color: green; border-width: medium;">
+    <div class="image" align="center">
+    <img src="/static/images/emptycart.jpg" class="card-img-top mb-0 mt-3" style="width:9rem">
+    </div>
+    <div class="card-body mt-0">
+    <h2>Your Cart Is Empty!!!</h2>
+    <p class="card-text">Start Shopping Now!!!</p>
+    </div>
 
     <div class="button-one mb-4" align="center">
-  <a type="button" class="btn btn-success"style="width: 12rem" href="{% url 'login' %}">Back to Login</a>
+    <a type="button" class="btn btn-success"style="width: 6 rem" href="{% url 'landingpage' %}"><i class="fas fa-shopping-cart"></i> Back To Home Page </a>
+    </div>
+    </div>
+    </div>
+   </div>
   </div>
-</div>
-</div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <!-- Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     <script src="/static/app/js/owl.carousel.min.js"></script>
     <script src="/static/app/js/all.min.js"></script>
