--- a/EcommWeb/shop/templates/login.html
+++ b/EcommWeb/shop/templates/login.html
@@ -80,7 +80,7 @@
                 </ul>
               </li>
               <li class="nav-item mx-2">
-                <a href="{% url 'shoppingcart' %}" class="nav-link text-white"
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
@@ -109,7 +109,7 @@
           <h3 align="center">Login To Your Account</h3>
           <br />
 
-          <form action="" method="post" novalidate class="shadow p-5">
+          <form action="" method="post" novalidate class="shadow p-5" >
           {% csrf_token %}
           {% for fm in form %}
             <div class="form-group">
