--- a/EcommWeb/shop/templates/orders.html
+++ b/EcommWeb/shop/templates/orders.html
@@ -12,6 +12,7 @@
     <title>Profile Page</title>
     </head>
     <body>
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container">
         <a class="navbar-brand" href="{% url 'landingpage' %}">ShopFresho</a>
@@ -76,7 +77,7 @@
                 </ul>
               </li>
               <li class="nav-item mx-2">
-                <a href="{% url 'shoppingcart' %}" class="nav-link text-white"
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
@@ -107,12 +108,70 @@
    <h3 align="center">Your Orders</h3>
    <br>
 
-   <div class="col-sm-9 offset-sm-1" align="center">
-   <div class="row">
-    <div class="col-sm-6">Order 1</div>
-    <div class="col-sm-6">Order 2</div>
    </div>
   </div>
+  </div>
+
+   <div class="col-sm-10 offset-sm-1">
+   {% for order in orderplaced %}
+   <div class="row shadow-sm mb-3" style="border-radius:15px ; border-style:solid" ;>
+   <div class="col-sm-2" >
+   <img src="{{order.product.product_image.url}}" alt="" srcset="" class="img-fluid" height="150" width="150">
+   </div>
+    <div class="col-sm-7 mt-4" >
+    <p> {{order.product.product_name}}</p>
+    <p> Quantity: {{order.quantity}}</p>
+    <p> Price: {{order.total_indcost}} </p> 
+    </div>
+
+
+    <div class="col-sm-3 fw-bold mt-4">
+    <p>Order Status: {{order.status}}</p>
+
+
+    {% if order.status == 'Order Placed' %}
+    <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+   </div>
+   {% endif %}
+  
+
+  {% if order.status == 'Dispatched' %}
+    <div class="progress">
+    <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+   </div>
+  {% endif %}
+
+  {% if order.status == 'On The Way' %}
+    <div class="progress">
+    <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+   </div>
+  {% endif %}
+
+  {% if order.status == 'Out for Delivery' %}
+    <div class="progress">
+    <div class="progress-bar bg-warning" role="progressbar" style="width: 80%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+   </div>
+ {% endif %}
+
+  {% if order.status == 'Delivered' %}
+    <div class="progress">
+    <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+   </div>
+  {% endif %}
+
+  {% if order.status == 'Order Cancelled' %}
+    <div class="progress">
+    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+   </div>
+  {% endif %}
+
+
+
+  </div>
+  </div>
+  {% endfor %}
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!-- Bootstrap Bundle with Popper -->
