--- a/EcommWeb/shop/templates/shoppingcart.html
+++ b/EcommWeb/shop/templates/shoppingcart.html
@@ -83,7 +83,7 @@
                 </ul>
               </li>
               <li class="nav-item mx-2">
-                <a href="{% url 'shoppingcart' %}" class="nav-link text-white"
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"
                   >Cart <span class="badge bg-dark"> 4</span></a
                 >
               </li>
@@ -112,42 +112,31 @@
     <div class="card">
    <div class="card-body">
     <h3 align="center">Cart</h3>
+    <br>
+
+    {% for cart in carts %}
     <div class="row">
-    <div class="col-sm-3 text-center align-self-center"><img src="/static/images/kitchen.jpg" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"> </div>
+    <div class="col-sm-3 text-center align-self-center"><img src="{{cart.product.product_image.url}}" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"> </div>
      <div class="col-sm-9">
       <div>
-       <h5>Spectra Cooker 3L</h5>
-       <div class="my-3">
+       <h5>{{cart.product.product_name}}</h5>
+       <div class="my-2">
         <label for="quantity">Quantity:</label>
-        <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
-          <span id="quantity">1</span>
-        <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
+        <a class="minus-cart btn" pid="{{cart.product.id}}"><i class="fas fa-minus-square fa-lg"></i></a>
+          <span id="quantity">{{cart.quantity}}</span>
+        <a class="plus-cart btn" pid="{{cart.product.id}}"><i class="fas fa-plus-square fa-lg"></i></a>
        </div> 
        <div class="d-flex justify-content-between">
-        <a href="#" class="btn btn-sm btn-danger mr-3">Remove</a>
-        <p class="mb-0"><span><strong>₹2195.00</strong></span></p>
+        <a class="remove-cart btn btn-sm btn-danger mr-3" pid="{{cart.product.id}}"><i class="fa fa-trash mx-0 my-1" align="center" aria-hidden="true"></i> Remove</a>
+        <p class="mb-0"><span><strong>₹{{cart.product.product_price}}0</strong></span></p>
        </div>
       </div>
      </div>
     </div>
-    <div class="row my-5">
-     <div class="col-sm-3 text-center align-self-center"> <img src="/static/images/masala4.jfif" alt="" srcset="" class="img-fluid img-thumbnail shadow-sm" height="150" width="150"></div>
-     <div class="col-sm-9"> 
-      <div>
-       <h5>Pav Bhaji Masala</h5>
-       <div class="my-3">
-        <label for="quantity">Quantity:</label>
-        <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
-          <span id="quantity">2</span>
-        <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
-       </div> 
-       <div class="d-flex justify-content-between">
-        <a href="#" class="btn btn-sm btn-danger mr-3">Remove</a>        
-        <p class="mb-0"><span><strong>₹140.00</strong></span></p>
-       </div>
-      </div>
-     </div>
-    </div>
+    <br>
+    <br>
+    {% endfor %}
+
    </div>
    </div>
   </div>
@@ -158,13 +147,13 @@
     <div class="card-body">
       <h3>Total Amount is:</h3>
       <ul class="list-group">
-       <li class="list-group-item d-flex justify-content-between align-items-center">Amount<span>₹2335.00</span></li>
-       <li class="list-group-item d-flex justify-content-between align-items-center">Shipping<span>₹70.00</span></li>
+       <li class="list-group-item d-flex justify-content-between align-items-center">Amount<span>₹<span id="amount">{{amount}}</span></span></li>
+       <li class="list-group-item d-flex justify-content-between align-items-center">Shipping<span>₹{{shipping}}</span></li>
        <li class="list-group-item d-flex justify-content-between align-items-center mb-3">
         <div>
            <strong>Total Price:</strong> <small>(including taxes)</small>
          </div>
-         <span><strong>₹2405.00</strong></span>
+         <span><strong>₹<span id="total">{{total}}</span></strong></span>
        </li>
       </ul>
       <div class="d-grid"><a href="/checkout/" class="btn btn-success">Place Order</a></div>
@@ -176,8 +165,6 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <script src="/static/app/js/owl.carousel.min.js"></script>
-    <script src="/static/app/js/all.min.js"></script>
-    <script src="/static/app/js/myscript.js"></script>
+    <script src="/static/JS/app.js"></script>
   </body>
 </html>
