--- a/EcommWeb/shop/templates/landingpage.html
+++ b/EcommWeb/shop/templates/landingpage.html
@@ -196,8 +196,8 @@
               alt="product"
               class="product-img"
             />
-            {% if iteminCart %}
-            <button type="button" class="btn btn-danger">Danger</button>
+            {% comment %} {% if iteminCart %}
+            <button type="button" class="btn btn-danger">Danger</button> {% endcomment %}
             {% else %}
             <form action="/cart">
             <input type="hidden" name="pid" value={{k.id}} id="pid">
