--- a/EcommWeb/shop/templates/orders.html
+++ b/EcommWeb/shop/templates/orders.html
@@ -8,6 +8,13 @@
 
     <link rel="stylesheet" href="/static/CSS/styles.css" />
 
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+
 
     <title>Profile Page</title>
     </head>
@@ -76,10 +83,11 @@
                   <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
-              <li class="nav-item mx-2">
-                <a href="{% url 'displaycart' %}" class="nav-link text-white"
-                  >Cart <span class="badge bg-dark"> 4</span></a
-                >
+              	<li class="nav-item mx-2">
+              <div class="cart-btn">
+              <span class="nav-icon">
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"><i class="fas fa-cart-plus"></i></a> 
+                </div>
               </li>
               {% else %}
               <li class="nav-item mx-2">
