--- a/EcommWeb/shop/static/CSS/landingpage.css
+++ b/EcommWeb/shop/static/CSS/landingpage.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Overlock:wght@700&display=swap');
 
 body {
-  font-family: "Baloo Bhai 2", cursive;
+  font-family: 'Overlock', cursive;
 }
 
 :root {
@@ -11,6 +11,7 @@ body {
   --mainGrey: #e8ffca;
   --mainSpacing: 0.1rem;
   --mainTransition: all 0.3s linear;
+  --stockoff:rgb(236, 84, 84);
 }
 
 .icons-container {
@@ -120,4 +121,23 @@ body {
   letter-spacing: var(--mainSpacing);
   color: var(--primaryColor);
   text-align: center;
+}
+
+
+.nav-icon {
+  font-size: 1.2rem;
+}
+.cart-btn {
+  position: relative;
+  cursor: pointer;
+}
+.cart-items {
+  font-size: 1rem;
+  position: absolute;
+  top: -6px;
+  right: -8px;
+  background: var(--primaryColor);
+  padding: 0 5px;
+  border-radius: 30%;
+  color: var(--mainWhite);
 }
