--- a/EcommWeb/shop/static/CSS/styles.css
+++ b/EcommWeb/shop/static/CSS/styles.css
@@ -1,5 +1,33 @@
-@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Overlock:wght@700&display=swap');
+
+:root {
+  --primaryColor: #67bb46;
+  --mainWhite: rgb(255, 255, 255);
+  --mainBlack: rgb(255, 255, 255);
+  --mainGrey: #e8ffca;
+  --mainSpacing: 0.1rem;
+  --mainTransition: all 0.3s linear;
+  --stockoff:rgb(236, 84, 84);
+}
 
 body {
-  font-family: "Baloo Bhai 2", cursive;
+  font-family: 'Overlock', cursive;
+}
+
+.nav-icon {
+  font-size: 1.2rem;
+}
+.cart-btn {
+  position: relative;
+  cursor: pointer;
+}
+.cart-items {
+  font-size: 1rem;
+  position: absolute;
+  top: -6px;
+  right: -8px;
+  background: var(--primaryColor);
+  padding: 0 5px;
+  border-radius: 30%;
+  color: var(--mainWhite);
 }
