--- a/EcommWeb/shop/templates/addresses.html
+++ b/EcommWeb/shop/templates/addresses.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="/static/CSS/styles.css" />
 
     <title>Addresses Page</title>
@@ -75,9 +82,10 @@
                 </ul>
               </li>
               <li class="nav-item mx-2">
-                <a href="{% url 'displaycart' %}" class="nav-link text-white"
-                  >Cart <span class="badge bg-dark"> 4</span></a
-                >
+              <div class="cart-btn">
+              <span class="nav-icon">
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"><i class="fas fa-cart-plus"></i></a> 
+                </div>
               </li>
               {% else %}
               <li class="nav-item mx-2">
@@ -106,19 +114,24 @@
    <h3 align="center">Your Addresses</h3>
    <br>
 
-   <div class="col-sm-9 offset-sm-1">
+   <div class="col-sm offset-sm-1">
    <div class="row">
    {% for add in custadd%}
     <div class="col-sm-6" >
      <div class="card">
       <div class="card-body" style="border-style:solid">
+      <div class="newone" align="center">
        <h3>Address {{forloop.counter}}</h3>
+       </div>
        <br>
        <p>Name: {{add.Name}}</p>
        <p>Address: {{add.Address}}</p>
        <p>City: {{add.City}}</p>
        <p>State: {{add.State}}</p>
        <p>State: {{add.Pincode}}</p>
+       <div class="newone" align="center">
+       <a class="remove-cart btn btn-sm btn-danger mr-3"><i class="fa fa-trash mx-0 my-1" align="center" aria-hidden="true"></i> Remove</a
+       </div>
       </div>
      </div>
     </div>
@@ -131,11 +144,6 @@
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-    <script src="/static/app/js/owl.carousel.min.js"></script>
-    <script src="/static/app/js/all.min.js"></script>
-    <script src="/static/app/js/myscript.js"></script>
   </body>
 </html>
