--- a/EcommWeb/shop/templates/emptycart.html
+++ b/EcommWeb/shop/templates/emptycart.html
@@ -82,10 +82,11 @@
                   <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
-              <li class="nav-item mx-2">
-                <a href="{% url 'displaycart' %}" class="nav-link text-white"
-                  >Cart <span class="badge bg-dark"> 4</span></a
-                >
+             <li class="nav-item mx-2">
+              <div class="cart-btn">
+              <span class="nav-icon">
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"><i class="fas fa-cart-plus"></i></a> 
+                </div>
               </li>
               {% else %}
               <li class="nav-item mx-2">
@@ -129,9 +130,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-    <script src="/static/app/js/owl.carousel.min.js"></script>
-    <script src="/static/app/js/all.min.js"></script>
-    <script src="/static/app/js/myscript.js"></script>
   </body>
 </html>
