--- a/EcommWeb/shop/templates/password_reset_confirm.html
+++ b/EcommWeb/shop/templates/password_reset_confirm.html
@@ -8,6 +8,13 @@
 
     <link rel="stylesheet" href="/static/CSS/styles.css" />
 
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+
 
     <title>Reset Password Page</title>
     </head>
@@ -77,14 +84,15 @@
               </li>
               <li class="nav-item mx-2">
                 <a href="{% url 'displaycart' %}" class="nav-link text-white"
-                  >Cart <span class="badge bg-dark"> 4</span></a
+                  ><i class="fas fa-shopping-cart"></i></a
                 >
               </li>
               {% else %}
-              <li class="nav-item mx-2">
-                <a href="{% url 'login' %}" class="nav-link text-white"
-                  >Login</a
-                >
+              	<li class="nav-item mx-2">
+              <div class="cart-btn">
+              <span class="nav-icon">
+                <a href="{% url 'displaycart' %}" class="nav-link text-white"><i class="fas fa-cart-plus"></i></a> 
+                </div>
               </li>
               <li class="nav-item mx-2">
                 <a href="{% url 'register' %}" class="nav-link text-white"
@@ -132,11 +140,8 @@
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- Bootstrap Bundle with Popper -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <script src="/static/app/js/owl.carousel.min.js"></script>
-    <script src="/static/app/js/all.min.js"></script>
-    <script src="/static/app/js/myscript.js"></script>
   </body>
 </html>
