--- a/EcommWeb/shop/templates/landingpage.html
+++ b/EcommWeb/shop/templates/landingpage.html
@@ -211,7 +211,7 @@
               alt="product"
               class="product-img"
             />
-              <a href="{% url 'detail' k.id %}" class="bag-btn" type="submit">View Item
+              <a href="{% url 'detail' k.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{k.product_name}}</h3>
@@ -227,7 +227,7 @@
               alt="product"
               class="product-img"
             />
-            <a href="{% url 'detail' k.id %}" class="bag-btn" type="submit">View Item
+            <a href="{% url 'detail' k.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{k.product_name}}</h3>
@@ -244,7 +244,7 @@
               alt="product"
               class="product-img"
             />
-            <a href="{% url 'detail' k.id %}" class="bag-btn" type="submit">View Item
+            <a href="{% url 'detail' k.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{k.product_name}}</h3>
@@ -267,7 +267,7 @@
               alt="product"
               class="product-img"
             />
-            <a href="{% url 'detail' d.id %}" class="bag-btn" type="submit">View Item
+            <a href="{% url 'detail' d.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{d.product_name}}</h3>
@@ -283,7 +283,7 @@
               alt="product"
               class="product-img"
             />
-            <a href="{% url 'detail' d.id %}" class="bag-btn" type="submit">View Item
+            <a href="{% url 'detail' d.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{d.product_name}}</h3>
@@ -299,7 +299,7 @@
               alt="product"
               class="product-img"
             />
-            <a href="{% url 'detail' d.id %}" class="bag-btn" type="submit">View Item
+            <a href="{% url 'detail' d.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{d.product_name}}</h3>
@@ -323,7 +323,7 @@
               alt="product"
               class="product-img"
             />
-           <a href="{% url 'detail' bm.id %}" class="bag-btn" type="submit">View Item
+           <a href="{% url 'detail' bm.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{bm.product_name}}</h3>
@@ -339,7 +339,7 @@
               alt="product"
               class="product-img"
             />
-            <a href="{% url 'detail' m.id %}" class="bag-btn" type="submit">View Item
+            <a href="{% url 'detail' m.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{m.product_name}}</h3>
@@ -355,7 +355,7 @@
               alt="product"
               class="product-img"
             />
-          <a href="{% url 'detail' bm.id %}" class="bag-btn" type="submit">View Item
+          <a href="{% url 'detail' bm.id %}" class="bag-btn btn btn-success" type="submit">View Item
               <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
           </div>
           <h3>{{bm.product_name}}</h3>
