--- a/EcommWeb/shop/static/CSS/landingpage.css
+++ b/EcommWeb/shop/static/CSS/landingpage.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Overlock:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 body {
-  font-family: 'Overlock', cursive;
+  font-family: 'Poppins', sans-serif;
 }
 
 :root {
