--- a/EcommWeb/shop/static/CSS/styles.css
+++ b/EcommWeb/shop/static/CSS/styles.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Overlock:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
 
 :root {
   --primaryColor: #67bb46;
@@ -8,10 +12,6 @@
   --mainSpacing: 0.1rem;
   --mainTransition: all 0.3s linear;
   --stockoff:rgb(236, 84, 84);
-}
-
-body {
-  font-family: 'Overlock', cursive;
 }
 
 .nav-icon {
