--- a/EcommWeb/shop/templates/details.html
+++ b/EcommWeb/shop/templates/details.html
@@ -129,10 +129,13 @@
   <div class="col-sm-6 text-center align-self-center mt-1">
    <img src="{{product.product_image.url}}" alt="" class="img-fluid img-thumbnail">
   </div>
+  <br>
   <div class="col-sm-5 offset-sm-1">
-   <h2 align="center">Product Title: {{product.product_name}}</h2>
-   <hr>
-   <h4>₹{{product.product_price}}0 <small class="fw-light text-decoration-line-through">₹{{product.product_cutprice}}0</small></h4> <br>
+   <h2 align="center">{{product.product_name}}</h2>
+   <br>
+   <div class="prices mt-2" align="center">
+   <h5 class="fw-light text-decoration-line-through">M.R.P.: ₹{{product.product_cutprice}}0</h5>
+   <h5>Deal Price₹{{product.product_price}}0<br><br>
    
    
    <form action="/cart" class="d-inline">
@@ -142,8 +145,8 @@
 
 
 
-
    <a href="{% url 'aboutus' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
+   </div>
    <h5 class="mt-5">Available Offers</h5>
    <ul>
     <li>Bank Offer 5% Unlimited Cashback on Flipkart Axis Bank Credit</li>
@@ -151,12 +154,11 @@
     <li>No cost EMI ₹1,667/month. Standard EMI also available</li>
     <li>Partner Offer ₹2000 Flipkart Gift Card on Every 1000th Transaction with a new Visa Debit/Credit Card</li>
    </ul>
-   <p>Description:{{product.product_description}} </p> <br>
+   <br>
+   <h4>Description:</h4><p>{{product.product_description}}</p> <br>
   </div>
  </div>
 </div>
-
-
 
 <div class="container">
     <div class="row my-3">
@@ -169,27 +171,23 @@
     <div class="adas" align="center">
     <button type="submit" class="btn btn-success shadow px-5 py-2">Create A Review</button></div>
     </form>
-
-
    </div>
   </div>
   </div>
 
-   <div class="col-sm-10 offset-sm-1">
+   <div class="col-sm offset-sm-2 mt-5 mx-5 mb-3" align="center">
+   <div class="row">
    {% for r in reviews %}
-   <div class="row shadow-sm mb-3" style="border-radius:15px ; border-style:solid" ;>
-   <div class="col-sm-2" >
-   </div>
-    <div class="col-sm-7 mt-4" >
-    <p>{{user}}</p>
-    <p> {{r.review_title}}</p>
-    <p> {{r.review_detail}}</p>
-    </div>
-
-
-    <div class="col-sm-3 fw-bold mt-4">
-
-    {% if r.rating == '1-star' %}
+    <div class="col-sm-12 mb-3">
+     <div class="card">
+      <div class="card-body" style="border-style:solid">
+      <div class="newone" align="center">
+       <h3>{{r.review_title}}</h3>
+       </div>
+       <p> -{{r.reviewer_name}}</p>
+       <div class="newone" align="center">
+       </div>
+       {% if r.rating == '1-star' %}
     <i class="fa fa-star" aria-hidden="true"></i>
    {% endif %}
   
@@ -219,13 +217,19 @@
     <i class="fa fa-star" aria-hidden="true"></i>
     <i class="fa fa-star" aria-hidden="true"></i>
    {% endif %}
-
+   <br><br>
+   <p> {{r.review_detail}}</p>
+      </div>
+     </div>
+    </div>
+    {% endfor %}
+   </div>
   </div>
-  </div>
-  {% endfor %}
+ </div>
+</div>
 
-
-
+  
+  
  <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
