--- a/EcommWeb/shop/templates/login.html
+++ b/EcommWeb/shop/templates/login.html
@@ -11,19 +11,19 @@
       crossorigin="anonymous"
     />
 
-     <link
+    <link rel="stylesheet" href="/static/CSS/landingpage.css" />
+
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/static/CSS/styles.css" />
-
-    <title>Login Page</title>
+    <title>Shopping Cart Page</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container">
         <a class="navbar-brand" href="{% url 'landingpage' %}">ShopFresho</a>
         <button
@@ -48,7 +48,11 @@
               >
             </li>
           </ul>
-          <div>
+          <form method="get" action="/search" class="d-flex">
+        <input class="form-control me-3" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
+        <button class="btn btn-danger" type="submit">Search</button>
+      </form>
+             </div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
@@ -60,7 +64,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Karthik
+                  {{request.user.username|capfirst}}
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
                   <li>
@@ -90,6 +94,9 @@
               <div class="cart-btn">
               <span class="nav-icon">
                 <a href="{% url 'displaycart' %}" class="nav-link text-white"><i class="fas fa-cart-plus"></i></a> 
+                  <div class="cart-items">
+                  {{total_products}}
+                  </div>
                 </div>
               </li>
               {% else %}
@@ -109,6 +116,8 @@
         </div>
       </div>
     </nav>
+    <br />
+
 
     <div class="container">
       <div class="row my-3">
