--- a/EcommWeb/shop/templates/no_products.html
+++ b/EcommWeb/shop/templates/no_products.html
@@ -118,86 +118,37 @@
     </nav>
     <br />
 
-    
-    
-    <div class="container">
-    <div class="row my-3">
-    <div class="col-sm-6 offset-sm-3">
-    <h3 align="center">Welcome {{request.user.username|capfirst}}</h3>
-   <h3 align="center">Your Orders</h3>
-   <br>
 
-   </div>
+
+<div class="all" align="center">
+<div class="card" style="width: 22rem; border-color: green; border-width: medium;">
+<div class="image" align="center">
+  <img src="/static/images/no.png" class="card-img-top mt-3" style="width:12rem">
   </div>
+  <div class="card-body">
+  <h2>No Results Found!!!</h2>
+    <p class="card-text">No products available with the given name</p>
+    <h5>Search for Another Product</h5>
   </div>
 
-   <div class="col-sm-10 offset-sm-1">
-   {% for order in orderplaced %}
-   <div class="row shadow-sm mb-3" style="border-radius:15px ; border-style:solid" ;>
-   <div class="col-sm-2" >
-   <img src="{{order.product.product_image.url}}" alt="" srcset="" class="img-fluid" height="150" width="150">
-   </div>
-    <div class="col-sm-7 mt-4" >
-    <p> {{order.product.product_name}}</p>
-    <p> Quantity: {{order.quantity}}</p>
-    <p> Price: {{order.total_indcost}} </p> 
-    </div>
-
-
-    <div class="col-sm-3 fw-bold mt-4">
-    <p>Order Status: {{order.status}}</p>
-
-
-    {% if order.status == 'Order Placed' %}
-    <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-   </div>
-   {% endif %}
-  
-
-  {% if order.status == 'Dispatched' %}
-    <div class="progress">
-    <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-   </div>
-  {% endif %}
-
-  {% if order.status == 'On The Way' %}
-    <div class="progress">
-    <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-   </div>
-  {% endif %}
-
-  {% if order.status == 'Out for Delivery' %}
-    <div class="progress">
-    <div class="progress-bar bg-warning" role="progressbar" style="width: 80%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-   </div>
- {% endif %}
-
-  {% if order.status == 'Delivered' %}
-    <div class="progress">
-    <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-   </div>
-  {% endif %}
-
-  {% if order.status == 'Order Cancelled' %}
-    <div class="progress">
-    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-   </div>
-  {% endif %}
-
-
-
+    <div class="button-one mb-4" align="center">
+  <a type="button" class="btn btn-success"style="width: 12rem" href="{% url 'landingpage' %}">Back to Home</a>
   </div>
-  </div>
-  {% endfor %}
+</div>
+</div>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
 
-    <script src="/static/app/js/owl.carousel.min.js"></script>
-    <script src="/static/app/js/all.min.js"></script>
-    <script src="/static/app/js/myscript.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
+
   </body>
 </html>
