--- a/EcommWeb/shop/templates/password_reset_done.html
+++ b/EcommWeb/shop/templates/password_reset_done.html
@@ -1,12 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="/static/CSS/styles.css" />
+    <link rel="stylesheet" href="/static/CSS/landingpage.css" />
 
     <link
       rel="stylesheet"
@@ -15,10 +20,10 @@
       crossorigin="anonymous"
     />
 
-    <title>Password Reset Done Page</title>
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <title>Shopping Cart Page</title>
+  </head>
+  <body>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container">
         <a class="navbar-brand" href="{% url 'landingpage' %}">ShopFresho</a>
         <button
@@ -43,7 +48,11 @@
               >
             </li>
           </ul>
-          <div>
+          <form method="get" action="/search" class="d-flex">
+        <input class="form-control me-3" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
+        <button class="btn btn-danger" type="submit">Search</button>
+      </form>
+             </div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
@@ -81,10 +90,13 @@
                   <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                 </ul>
               </li>
-              	<li class="nav-item mx-2">
+              <li class="nav-item mx-2">
               <div class="cart-btn">
               <span class="nav-icon">
                 <a href="{% url 'displaycart' %}" class="nav-link text-white"><i class="fas fa-cart-plus"></i></a> 
+                  <div class="cart-items">
+                  {{total_products}}
+                  </div>
                 </div>
               </li>
               {% else %}
@@ -104,7 +116,8 @@
         </div>
       </div>
     </nav>
-<br>
+    <br />
+
 
 
 <div class="all" align="center">
