--- a/EcommWeb/shop/templates/shoppingcart.html
+++ b/EcommWeb/shop/templates/shoppingcart.html
@@ -1,12 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="/static/CSS/styles.css" />
+    <link rel="stylesheet" href="/static/CSS/landingpage.css" />
 
     <link
       rel="stylesheet"
@@ -15,11 +20,10 @@
       crossorigin="anonymous"
     />
 
-    
     <title>Shopping Cart Page</title>
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+  </head>
+  <body>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container">
         <a class="navbar-brand" href="{% url 'landingpage' %}">ShopFresho</a>
         <button
@@ -44,7 +48,11 @@
               >
             </li>
           </ul>
-          <div>
+          <form method="get" action="/search" class="d-flex">
+        <input class="form-control me-3" type="search" placeholder="Search" aria-label="Search" name="search" id="search">
+        <button class="btn btn-danger" type="submit">Search</button>
+      </form>
+             </div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
@@ -108,6 +116,7 @@
         </div>
       </div>
     </nav>
+    <br />
 
     <div class="container my-5">
     <div class="row">
@@ -133,13 +142,17 @@
        <div class="d-flex justify-content-between">
         <a class="remove-cart btn btn-sm btn-danger mr-3" pid="{{cart.product.id}}"><i class="fa fa-trash mx-0 my-1" align="center" aria-hidden="true"></i> Remove</a>
         <p class="mb-0"><span><strong>₹{{cart.product.product_price}}0</strong></span></p>
+
        </div>
+
+       <a href="{% url 'detail' cart.product.id %}" class="btn btn-sm btn-success mr-3 mt-3"><i class="fa fa-arrow-left" aria-hidden="true"></i>  Product</a>
       </div>
      </div>
     </div>
     <br>
     <br>
     {% endfor %}
+    
 
    </div>
    </div>
